devops/Docker/Caronte/proyectos/minextjs/deploy/kubernetes/deploy-minextjs.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minextjs-deployment
  namespace: proyectonextjs
spec:
  replicas: 2
  selector:
    matchLabels:
      app: webnextjs
  template:
    metadata:
      labels:
        app: webnextjs
    spec:
      containers:
        - name: webnextjs
          image: carmen24/minextjs:latest
          ports:
            - containerPort: 80
