devops/Docker/Caronte/proyectos/minextjs/deploy/kubernetes/service-minextjs.yml
apiVersion: v1
kind: Service
metadata:
  name: minextjs-service
  namespace: proyectonextjs
spec:
  selector:
    app: webnextjs
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
