devops/Docker/Caronte/proyectos/minextjs/deploy/kubernetes/ingress-minextjs.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minextjs-ingress
  namespace: proyectonextjs
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: www.minextjs.es
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minextjs-service
                port:
                  number: 80
